--- a/index.html
+++ b/index.html
@@ -7,19 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@400;600&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>My Resturant</title>
 </head>
 
 <body>
-    <h1>Skip The Diet,</h1>
-    <h1>This is my</h1>
-    <pre>This line
-        oneline 
-        ofline
-    </pre>
+    <section class="flexible-part">
+        <div class="text-part">
+            <h1><span class="orange-color">Skip</span> The Diet,</h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide
+                healthy and delicious food for you!
+            </p>
+            <a target="_blank" href="https://www.foodpanda.com.bd/">Order Food</a>
+        </div>
+        <div class="image-part">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
+
 </body>
 
 </html>
