second-part-include

--- a/index.html
+++ b/index.html
@@ -18,16 +18,23 @@
             <h1><span class="orange-color">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
-            <p>Imagine you don't need a diet because we provide
-                healthy and delicious food for you!
-            </p>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you! </p>
             <a target="_blank" href="https://www.foodpanda.com.bd/">Order Food</a>
         </div>
         <div class="image-part">
             <img src="images/female/Group 8425.png" alt="">
         </div>
     </section>
-
+    <section class="flexible-part">
+        <div class="image-part">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div>
+            <h2>About Me</h2>
+            <p></p>
+            <a target="_blank" href="https://www.linkedin.com/in/syed-daiam-ullah-9ba9a917b/">Contact me</a>
+        </div>
+    </section>
 </body>
 
 </html>
