Reverse-Second-part

--- a/index.html
+++ b/index.html
@@ -14,25 +14,33 @@
 
 <body>
     <section class="flexible-part">
-        <div class="text-part">
-            <h1><span class="orange-color">Skip</span> The Diet,</h1>
-            <h1>Just Eat Healthy</h1>
-            <h1>With Food Network</h1>
+        <div class="common-part gaping">
+            <h1><span class="orange-color">Skip</span> The Diet,<br> Just Eat Healthy <br> With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you! </p>
             <a target="_blank" href="https://www.foodpanda.com.bd/">Order Food</a>
         </div>
-        <div class="image-part">
+        <div class="common-part">
             <img src="images/female/Group 8425.png" alt="">
         </div>
     </section>
-    <section class="flexible-part">
-        <div class="image-part">
+    <section class="flexible-part background-add">
+        <div class="common-part image-resize">
             <img src="images/female/Person Image.png" alt="">
         </div>
-        <div>
+        <div class="common-part text-gapping">
             <h2>About Me</h2>
-            <p></p>
+            <p>The digital landscape has transformed, and the way businesses use online technology has changed.
+                WebAlive has also evolved, mastering new skills,
+                cutting-edge web design, application development, and ecommerce solutions to our clients.</p>
             <a target="_blank" href="https://www.linkedin.com/in/syed-daiam-ullah-9ba9a917b/">Contact me</a>
+        </div>
+    </section>
+    <section>
+        <div class="recipies-area">
+            <h2>My Recipies</h2>
+            <p>Food is good; we can all agree on that. But what’s than just uploading sensual photos of delectable food
+                is inscribing fitting captions on them? This, my friend, Is the purpose of this
+                listing.</p>
         </div>
     </section>
 </body>
