--- a/index.html
+++ b/index.html
@@ -42,7 +42,33 @@
                 is inscribing fitting captions on them? This, my friend, Is the purpose of this
                 listing.</p>
         </div>
+        <div class="flexible-part">
+            <div class="recipies-item">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h3>Recipie Title</h3>
+                <p>Purchase Cream Charger Cylinders Today for Your Business.The new and innovative whipped cream
+                    charger.Australian Design.</p>
+            </div>
+            <div class="recipies-item">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h3>Recipie Title</h3>
+                <p>Purchase Cream Charger Cylinders Today for Your Business.The new and innovative whipped cream
+                    charger.Australian Design.</p>
+            </div>
+            <div class="recipies-item">
+                <img src="images/food/Project Cover.png" alt="">
+                <h3>Recipie Title</h3>
+                <p>Purchase Cream Charger Cylinders Today for Your Business.The new and innovative whipped cream
+                    charger.Australian Design.</p>
+            </div>
+        </div>
     </section>
+    <footer>
+        <div class="end-part">
+            <h3><span class="orange-color">FOOD</span> BANK</h3>
+            <span class="close-part">Eat healthy to live healthy. Live healthy to live happy.</span>
+        </div>
+    </footer>
 </body>
 
 </html>
