--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/images.jfif" type="image/x-icon">
     <title>My Resturant</title>
 </head>
 
@@ -62,6 +63,9 @@
                     charger.Australian Design.</p>
             </div>
         </div>
+    </section>
+    <section>
+
     </section>
     <footer>
         <div class="end-part">
