--- a/index.html
+++ b/index.html
@@ -48,23 +48,40 @@
                 <img src="images/food/Project Cover.jpg" alt="">
                 <h3>Recipie Title</h3>
                 <p>Purchase Cream Charger Cylinders Today for Your Business.The new and innovative whipped cream
-                    charger.Australian Design.</p>
+                    charger.Australian Design.Lime Beef and Basil Stir Fry.Eggs. Eggs are incredibly healthy and
+                    nutrient-dense.</p>
             </div>
             <div class="recipies-item">
                 <img src="images/food/Project Cover1.jpg" alt="">
                 <h3>Recipie Title</h3>
                 <p>Purchase Cream Charger Cylinders Today for Your Business.The new and innovative whipped cream
-                    charger.Australian Design.</p>
+                    charger.Australian Design.Lime Beef and Basil Stir Fry.Eggs. Eggs are incredibly healthy and
+                    nutrient-dense.</p>
             </div>
             <div class="recipies-item">
                 <img src="images/food/Project Cover.png" alt="">
                 <h3>Recipie Title</h3>
                 <p>Purchase Cream Charger Cylinders Today for Your Business.The new and innovative whipped cream
-                    charger.Australian Design.</p>
+                    charger.Australian Design.Lime Beef and Basil Stir Fry.Eggs. Eggs are incredibly healthy and
+                    nutrient-dense.</p>
             </div>
         </div>
     </section>
-    <section>
+    <section class="recipies-item channel-develop">
+        <div class="flexible-part">
+            <div class="channel-item">
+                <h1>700k</h1>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div class="channel-item">
+                <h1>2.4m</h1>
+                <p>Instagram Followers</p>
+            </div>
+            <div class="channel-item">
+                <h1>100k</h1>
+                <p>Dribbble Shot Likes</p>
+            </div>
+        </div>
 
     </section>
     <footer>
